configurado tsyringe, documentado rotas com swagger
